<resources>
    <string name="app_name">Submission2Bro</string>
    <string name="tv_show">TV Show</string>
    <string name="lele_goreng">Lele Goreng</string>
    <string name="_7_0">7.0</string>
    <string name="_2018">2018</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">Tv Show</string>
    <string name="detail_fragment">Detail</string>
    <string name="description">Description</string>

    <string-array name="movie_name">
        <item>Avengers : Infinity War</item>
        <item>Aquaman</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed</item>
        <item>Deadpool</item>
        <item>Dragoon Ball Super: Broly</item>
        <item>Glass</item>
        <item>Spider-man: Into The SpiderVerse</item>
        <item>The Girl in the Spider\'s Web</item>
    </string-array>

    <string-array name="movie_rate">
        <item>8.3</item>
        <item>6.8</item>
        <item>8.0</item>
        <item>6.5</item>
        <item>7.3</item>
        <item>7.6</item>
        <item>7.5</item>
        <item>6.6</item>
        <item>8.4</item>
        <item>6.0</item>
    </string-array>

    <string-array name="movie_year">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2015</item>
        <item>2016</item>
        <item>2018</item>
        <item>2019</item>
        <item>2018</item>
        <item>2018</item>
    </string-array>

    <string-array name="img_movie">
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_thegirl</item>
    </string-array>

    <string-array name="movie_desc">
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>The former World Heavyweight Champion Rocky Balboa serves as a trainer and mentor to Adonis Johnson, the son of his late friend and former rival Apollo Creed.</item>
        <item>Deadpool tells the origin story of former Special Forces operative turned mercenary Wade Wilson, who after being subjected to a rogue experiment that leaves him with accelerated healing powers, adopts the alter ego Deadpool. Armed with his new abilities and a dark, twisted sense of humor, Deadpool hunts down the man who nearly destroyed his life.</item>
        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called \'Broly\' who they\'ve never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so what\'s this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson \"Kingpin\" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
    </string-array>

    <string-array name="tv_show_name">

    </string-array>

    <string-array name="tv_show_year">

    </string-array>

    <string-array name="tv_show_rate">

    </string-array>

    <string-array name="img_tv_show">

    </string-array>

    <string-array name="tv_show_desc">

    </string-array>
</resources>
